fix swagger controller and route
