# my-project/app/Http/Controllers/FamilySituationController.php
@@ -15,7 +15,7 @@ class FamilySituationController extends Controller
 
     /**
      * @OA\Get(
-     *      path="/situation-familiale",
+     *      path="/family-situation",
      *      operationId="familySituationIndex",
      *      tags={"situation familiale"},
 
@@ -55,7 +55,7 @@ class FamilySituationController extends Controller
 
     /**
      * @OA\Get(
-     *      path="/situation-familiale/{id}",
+     *      path="/family-situation/{id}",
      *      operationId="familySituationShow",
      *      tags={"situation familiale"},
      *      summary="Get a one family Situation",
@@ -107,7 +107,7 @@ class FamilySituationController extends Controller
 
     /**
      * @OA\Delete(
-     *      path="/situation-familiale/{id}",
+     *      path="/family-situation/{id}",
      *      operationId="familySituationDestroy",
      *      tags={"situation familiale"},
      *      summary="Delete a one family Situation",
